<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="title_main">My Nanodegree Apps!</string>
    <string name="button_spotify">Spotify Streamer</string>
    <string name="button_scores">Scores App</string>
    <string name="button_library">Library App</string>
    <string name="button_build">Build It Bigger</string>
    <string name="button_bacon">XYZ Reader</string>
    <string name="button_capstone">Capstone</string>
</resources>
