<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_main"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_spotify"
        android:id="@+id/button"
        android:padding="20dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:background="#F08C35"
        android:layout_marginTop="40dp"
        android:clickable="true" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_scores"
        android:id="@+id/button2"
        android:padding="20dp"
        android:layout_below="@+id/button"
        android:background="#F08C35"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_library"
        android:id="@+id/button3"
        android:padding="20dp"
        android:layout_below="@+id/button2"
        android:background="#F08C35"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_build"
        android:id="@+id/button4"
        android:padding="20dp"
        android:layout_below="@+id/button3"
        android:layout_alignLeft="@+id/button3"
        android:background="#F08C35"
        android:layout_alignStart="@+id/button3"
        android:layout_marginTop="10dp"
        android:clickable="true" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_bacon"
        android:id="@+id/button5"
        android:padding="20dp"
        android:layout_below="@+id/button4"
        android:background="#F08C35"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true" />

    <Button
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:text="@string/button_capstone"
        android:id="@+id/button6"
        android:padding="20dp"
        android:background="#9C27B0"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true" />


</RelativeLayout>
